<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <TextView
        android:id="@+id/tvPlayerBet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="19dp"
        android:layout_marginLeft="19dp"
        android:layout_marginTop="24dp"
        android:text="@string/tvPlayerBet"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/btnEndGame"
        app:layout_constraintTop_toBottomOf="@+id/ivPlayerCard" />

    <TextView
        android:id="@+id/tvDealerBet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:layout_marginLeft="140dp"
        android:layout_marginTop="40dp"
        android:text="@string/tvDealerBet"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvPlayerCardValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="19dp"
        android:layout_marginLeft="19dp"
        android:layout_marginTop="8dp"
        android:text="@string/tvPlayerCardValue"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/btnEndGame"
        app:layout_constraintTop_toBottomOf="@+id/tvPlayerBet" />

    <TextView
        android:id="@+id/tvDealerCardValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:layout_marginLeft="140dp"
        android:layout_marginTop="8dp"
        android:text="@string/tvDealerCardValue"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDealerBet" />

    <TextView
        android:id="@+id/tvDefaultDealerScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:text="@string/tvDefaultDealerScore"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/tvDealerBet"
        app:layout_constraintTop_toTopOf="@+id/tvDealerBet" />

    <TextView
        android:id="@+id/tvDefaultPlayerCardValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:text="@string/tvDefaultPlayerCardValue"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/tvPlayerCardValue"
        app:layout_constraintTop_toTopOf="@+id/tvPlayerCardValue" />

    <ImageView
        android:id="@+id/ivDealerCard"
        android:layout_width="100dp"
        android:layout_height="120dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDealerCardValue"
        app:srcCompat="@drawable/starter_card"
        tools:srcCompat="@drawable/starter_card" />

    <ImageView
        android:id="@+id/ivPlayerCard"
        android:layout_width="100dp"
        android:layout_height="120dp"
        android:layout_marginBottom="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/starter_card"
        tools:srcCompat="@drawable/starter_card" />

    <Button
        android:id="@+id/btnEndGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="52dp"
        android:text="@string/btnEndGame"
        app:backgroundTint="@android:color/holo_red_light"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivPlayerCard" />

    <EditText
        android:id="@+id/etEnterBet"
        android:layout_width="101dp"
        android:layout_height="46dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/etEnterBetHint"
        android:inputType="numberSigned"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivDealerCard" />

    <Button
        android:id="@+id/btnBet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/btnBet"
        app:backgroundTint="@android:color/holo_red_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEnterBet" />

    <Button
        android:id="@+id/btnHit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/btnHit"
        app:backgroundTint="@android:color/holo_red_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnBet" />

    <Button
        android:id="@+id/btnStand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/btnStand"
        app:backgroundTint="@android:color/holo_red_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnHit" />

    <ImageView
        android:id="@+id/ivPokerChip1"
        android:layout_width="46dp"
        android:layout_height="43dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ivPlayerCard"
        app:srcCompat="@drawable/chips"
        tools:srcCompat="@drawable/chips" />

    <ImageView
        android:id="@+id/ivPokerChip4"
        android:layout_width="46dp"
        android:layout_height="43dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="@+id/ivDealerCard"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/chips"
        tools:srcCompat="@drawable/chips" />

    <ImageView
        android:id="@+id/ivPokerChip5"
        android:layout_width="46dp"
        android:layout_height="43dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="78dp"
        app:layout_constraintBottom_toBottomOf="@+id/ivDealerCard"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/chips"
        tools:srcCompat="@drawable/chips" />

    <ImageView
        android:id="@+id/ivPokerChip6"
        android:layout_width="46dp"
        android:layout_height="43dp"
        android:layout_marginEnd="76dp"
        android:layout_marginRight="76dp"
        android:layout_marginBottom="48dp"
        app:layout_constraintBottom_toBottomOf="@+id/ivDealerCard"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/chips"
        tools:srcCompat="@drawable/chips" />

    <ImageView
        android:id="@+id/ivPokerChip2"
        android:layout_width="46dp"
        android:layout_height="43dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="76dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ivPlayerCard"
        app:srcCompat="@drawable/chips"
        tools:srcCompat="@drawable/chips" />

    <ImageView
        android:id="@+id/ivPokerChip3"
        android:layout_width="46dp"
        android:layout_height="43dp"
        android:layout_marginStart="84dp"
        android:layout_marginLeft="84dp"
        android:layout_marginTop="52dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ivPlayerCard"
        app:srcCompat="@drawable/chips"
        tools:srcCompat="@drawable/chips" />

    <TextView
        android:id="@+id/tvDefaultPlayerScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:text="@string/tvDefaultPlayerScore"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/tvPlayerBet"
        app:layout_constraintTop_toTopOf="@+id/tvPlayerBet" />

    <TextView
        android:id="@+id/tvDefaultDealerCardValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:text="@string/tvDefaultDealerCardValue"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/tvDealerCardValue"
        app:layout_constraintTop_toTopOf="@+id/tvDealerCardValue" />

    <ImageView
        android:id="@+id/ivDeckPile"
        android:layout_width="100dp"
        android:layout_height="120dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        app:layout_constraintBottom_toTopOf="@+id/ivPlayerCard"
        app:layout_constraintEnd_toStartOf="@+id/btnBet"
        app:layout_constraintHorizontal_bias="0.703"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivDealerCard"
        app:layout_constraintVertical_bias="0.481"
        app:srcCompat="@drawable/deck_pile"
        tools:srcCompat="@drawable/deck_pile" />

    <Button
        android:id="@+id/btnReset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/btnReset"
        app:backgroundTint="@android:color/holo_red_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnStand" />

</androidx.constraintlayout.widget.ConstraintLayout>